--- a/src/main/webapp/WEB-INF/view/admin/directories/lists/list.html
+++ b/src/main/webapp/WEB-INF/view/admin/directories/lists/list.html
@@ -2,7 +2,6 @@
 <html lang="ru" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -224,8 +223,7 @@
 
             if (name != null) {
                 $.get("list/" + id).done(async function(fragment) {
-                    $('#single-listing').replaceWith(fragment);
-                    $('#single-listing').removeAttr('hidden');
+                    $('#single-listing').replaceWith(fragment).remove('hidden');
                     new ItcTabs('.tabs');
                 })
                 console.log('eval');
