--- a/src/main/webapp/WEB-INF/view/fragments/menu-staff.html
+++ b/src/main/webapp/WEB-INF/view/fragments/menu-staff.html
@@ -18,7 +18,7 @@
         <a href="#">Пользователи</a>
     </li>
     <li>
-        <a href="#">Группы</a>
+        <a th:href="@{/groups/list}">Группы</a>
     </li>
     <li>
         <a th:href="@{/lists/list}">Списки заданий</a>
