Fixed crashes on groups page + added set_listing method for groups

--- a/src/main/webapp/WEB-INF/view/admin/directories/lists/list.html
+++ b/src/main/webapp/WEB-INF/view/admin/directories/lists/list.html
@@ -223,7 +223,8 @@
 
             if (name != null) {
                 $.get("list/" + id).done(async function(fragment) {
-                    $('#single-listing').replaceWith(fragment).remove('hidden');
+                    $('#single-listing').replaceWith(fragment);
+                    $('#single-listing').removeAttr('hidden');
                     new ItcTabs('.tabs');
                 })
                 console.log('eval');
