Added new features for task_lists & connected group features
1. Added set & remove constraint methods for UI & refactored back for methods
2. Refactored view code for groups set_listing
3. Refactor view separation(separated file for constraint_part)

--- a/src/main/webapp/WEB-INF/view/admin/directories/groups/group.html
+++ b/src/main/webapp/WEB-INF/view/admin/directories/groups/group.html
@@ -120,8 +120,11 @@
                 case 'assignGroupBtn':
                     var groupId = document.getElementById('showGroupState').getAttribute('group-id');
                     var listingId = document.getElementById('listing').options[document.getElementById('listing').selectedIndex].getAttribute('data-id');
-                    $.get('set_listing?' + 'id=' + groupId + '&listingId=' + listingId).done(function (fragment){
-                      document.replaceWith(fragment);
+                    var url = 'set_listing?' + 'id=' + groupId + '&listingId=' + listingId;
+                    $.get(url).done(function (fragment){
+                      document.open();
+                      document.write(fragment);
+                      document.close();
                     });
                     break;
             }
