--- a/src/main/webapp/WEB-INF/view/admin/directories/lists/single-listing.html
+++ b/src/main/webapp/WEB-INF/view/admin/directories/lists/single-listing.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" th:href="@{/css/styles/style.css}">
     <link rel="stylesheet" th:href="@{/css/styles/reset.css}">
 </head>
+<!--/*@thymesVar id="singleListing" type="ru.spbu.distolymp.dto.entity.lists.listing.ListingDetailsDto"*/-->
 <body>
   <div class="tabs__content" id="single-listing" hidden th:attr="data-id=${singleListing.id}">
     <div class="tasks-manage__wrapper">
@@ -53,7 +54,135 @@
           </div>
         </div>
       </div>
-      <div th:replace="admin/directories/lists/constraint-part :: #constraint" id="constraint"></div>
+      <div class="tabs__pane" id = "constraint">
+        <div id="access" class="tabs-block">
+          <div th:switch="${singleListing.constraint}">
+            <p  class="access-text" th:case="null">Для списка не установлено ограничений</p>
+            <p class="access-text" th:case="*">
+              Доступ к списку разрешён с <b th:text="${#dates.format(singleListing.constraint.startDateTime, 'dd-MM-yyyy HH:mm')}">
+            </b> по
+              <b th:text="${#dates.format(singleListing.constraint.endDateTime, 'dd-MM-yyyy HH:mm')}"></b>
+              в течение
+              <b th:text="${singleListing.constraint.duration}"></b>
+            </p>
+          </div>
+          <div class="task-edit-btn__wrapper" id="constraint-manage">
+            <!-- first -->
+            <button class="task-edit-btn" id="setConstraintBtn" onclick="closeOrOpenModal(event)">Установить время для списка ...
+            </button>
+            <!-- second -->
+            <button class="task-edit-btn" id="removeConstraintBtn"
+                    onclick="closeOrOpenModal(event)">Снять ограничения по времени
+              ...
+            </button>
+          </div>
+          <div id="constraint-add" class="current-tasks-list__wrapper" hidden>
+            <b class="set-time-access">Установка времени доступа к списку заданий</b>
+            <div class="set-time-access__wrapper">
+              <div class="start-time__wrapper">
+                <p>Время начала</p>
+                <div class="set-start-time__wrapper set-time__block">
+                  <select id="start-day" class="start-day">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                  </select>
+                  <select id="start-month" class="start-month">
+                    <option value="Марта">Марта</option>
+                    <option value="Апреля">Апреля</option>
+                    <option value="Мая">Мая</option>
+                    <option value="Июня">Июня</option>
+                  </select>
+                  <select id="start-year" class="start-year">
+                    <option value="2005">2005</option>
+                    <option value="2006">2006</option>
+                    <option value="2007">2007</option>
+                    <option value="2008">2008</option>
+                  </select>
+                  <select id="start-time__hour" class="start-time__hour">
+                    <option value="19">19</option>
+                    <option value="20">20</option>
+                    <option value="21">21</option>
+                  </select>
+                  <p>часов</p>
+                  <select id="start-time__min" class="start-time__min">
+                    <option value="19">19</option>
+                    <option value="20">20</option>
+                    <option value="21">21</option>
+                  </select>
+                  <p>минут</p>
+
+                </div>
+              </div>
+              <div class="start-time__wrapper">
+                <p>Время окончания</p>
+                <div class="set-end-time__wrapper set-time__block">
+                  <select id="end-day" class="end-day">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                  </select>
+                  <select id="end-month" class="end-month">
+                    <option value="Марта">Марта</option>
+                    <option value="Апреля">Апреля</option>
+                    <option value="Мая">Мая</option>
+                    <option value="Июня">Июня</option>
+                  </select>
+                  <select id="end-year" class="end-year">
+                    <option value="2005">2005</option>
+                    <option value="2006">2006</option>
+                    <option value="2007">2007</option>
+                    <option value="2008">2008</option>
+                  </select>
+                  <select id="end-time__hour" class="end-time__hour">
+                    <option value="19">19</option>
+                    <option value="20">20</option>
+                    <option value="21">21</option>
+                  </select>
+                  <p>часов</p>
+                  <select id="end-time__min" class="end-time__min">
+                    <option value="19">19</option>
+                    <option value="20">20</option>
+                    <option value="21">21</option>
+                  </select>
+                  <p>минут</p>
+                </div>
+              </div>
+              <div class="start-time__wrapper duration-tasks__wrapper">
+                <p>Продолжительность</p>
+                <div class="duration-tasks__wrapper set-time__block">
+                  <select id="duration-tasks__hour" class="duration-tasks__hour">
+                    <option value="11">11</option>
+                    <option value="12">12</option>
+                    <option value="13">13</option>
+                    <option value="14">14</option>
+                  </select>
+                  <p>часов</p>
+                  <select id="duration-tasks__min" class="duration-tasks__min">
+                    <option value="0">0</option>
+                    <option value="15">15</option>
+                    <option value="30">30</option>
+                  </select>
+                  <p>минут</p>
+                </div>
+              </div>
+
+            </div>
+            <div class="access-btns__wrapper">
+              <button id="addConstraintButton" onclick="closeOrOpenModal(event)"
+                      class="add-task-button access-task-btn">
+                Задать время
+              </button>
+              <button id="closeConstraintButton" onclick="closeOrOpenModal(event)"
+                      class="add-task-button access-task-btn">
+                Закрыть
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </body>
