Added Regions directory

--- a/src/main/webapp/WEB-INF/view/admin/directories.html
+++ b/src/main/webapp/WEB-INF/view/admin/directories.html
@@ -27,7 +27,7 @@
 </p>
 
 <p>
-    <a href="#" class="abutton">
+    <a th:href="@{/regions/list}" class="abutton">
         Справочник регионов РФ
     </a>
 </p>
