--- a/src/main/webapp/WEB-INF/view/fragments/header.html
+++ b/src/main/webapp/WEB-INF/view/fragments/header.html
@@ -1,3 +1,3 @@
 <div id="header">
-    Заголовок
+    Администратор: <a th:href="@{/staff/info/{id}(id=${staffDetails.getStaff().getId()})}" th:text="${staffDetails.getUsername()}">admin</a>
 </div>
